# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  tests_and_deploy.yml
ansible/: .env.j2  make_deploy.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py  0003_alter_status_options.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_author_and_more.py  0003_tasklabelrelation_task_label.py  0004_alter_tasklabelrelation_task.py  0005_alter_task_options.py  0006_remove_task_label_task_labels_alter_task_status.py
task_manager/templates/: 404.html  base.html  index.html  login.html  user_form.html  users.html
task_manager/templates/labels/: labels.html
task_manager/templates/layouts/: base.html  delete.html  footer.html  form.html  navbar.html
task_manager/templates/statuses/: delete.html  statuses.form.html  statuses.html
task_manager/templates/tasks/: filter.html  task_form.html  task_show.html  tasks.html
task_manager/templates/users/: delete.html  user_form.html  users.html
task_manager/tests/fixtures/: labels.json  status.json  (+5 more)
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+11 files in other folders)
